--- a/index.html
+++ b/index.html
@@ -1,11 +1,223 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Aayush Sharma</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Aayush Sharma — AI / ML</title>
+  <meta name="description" content="Aayush Sharma — Artificial Intelligence, Machine Learning, Data Analytics" />
+  <style>
+    :root{
+      --bg:#ffffff;
+      --text:#111827;
+      --muted:#4b5563;
+      --line:#e5e7eb;
+      --link:#111827;
+      --max:920px;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      background:var(--bg);
+      color:var(--text);
+      font:15px/1.55 ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+    }
+    a{color:var(--link); text-decoration:underline; text-underline-offset:3px}
+    a:hover{opacity:.85}
+    .wrap{max-width:var(--max); margin:0 auto; padding:44px 18px 64px}
+    header{display:flex; gap:18px; align-items:flex-start; justify-content:space-between; flex-wrap:wrap}
+    h1{font-size:34px; line-height:1.1; margin:0}
+    .tagline{margin:8px 0 0; color:var(--muted)}
+    .meta{color:var(--muted); margin-top:10px}
+    .meta a{color:var(--muted)}
+    .pillrow{margin-top:14px; display:flex; gap:10px; flex-wrap:wrap}
+    .pill{
+      border:1px solid var(--line);
+      padding:6px 10px;
+      border-radius:999px;
+      font-size:13px;
+      color:var(--muted);
+    }
+    hr{border:0; border-top:1px solid var(--line); margin:28px 0}
+    section{margin-top:18px}
+    h2{
+      font-size:13px;
+      letter-spacing:.12em;
+      text-transform:uppercase;
+      color:var(--muted);
+      margin:0 0 12px;
+    }
+    .grid{display:grid; gap:16px}
+    .item{padding:0}
+    .itemhead{display:flex; justify-content:space-between; gap:14px; flex-wrap:wrap}
+    .role{font-weight:600}
+    .where{color:var(--muted)}
+    .when{color:var(--muted); white-space:nowrap}
+    ul{margin:10px 0 0 18px; padding:0}
+    li{margin:6px 0}
+    .skills{display:flex; gap:10px; flex-wrap:wrap}
+    .skill{border:1px solid var(--line); border-radius:10px; padding:6px 10px; font-size:13px; color:var(--muted)}
+    footer{margin-top:34px; color:var(--muted); font-size:12px}
+  </style>
 </head>
+
 <body>
-  <h1>Aayush Sharma</h1>
-  <p>Artificial Intelligence | Machine Learning</p>
+  <main class="wrap">
+    <header>
+      <div>
+        <h1>Aayush Sharma</h1>
+        <p class="tagline">Artificial Intelligence | Machine Learning | Data Analytics</p>
+        <p class="meta">
+          Nuremberg, Bavaria, Germany ·
+          <a href="mailto:aayushsharma1710@gmail.com">aayushsharma1710@gmail.com</a> ·
+          +49 177 4213695
+        </p>
+        <p class="meta">
+          <a href="https://www.linkedin.com/in/aayush-sharma-17102000/" target="_blank" rel="noreferrer">LinkedIn</a> ·
+          <a href="https://github.com/AayushSharma17" target="_blank" rel="noreferrer">GitHub</a>
+        </p>
+        <div class="pillrow">
+          <span class="pill">Python</span>
+          <span class="pill">Machine Learning</span>
+          <span class="pill">NLP</span>
+          <span class="pill">SQL</span>
+          <span class="pill">Power BI</span>
+        </div>
+      </div>
+    </header>
+
+    <hr />
+
+    <section>
+      <h2>Profile</h2>
+      <div class="grid">
+        <div class="item">
+          M.Sc. Artificial Intelligence student at FAU Erlangen–Nürnberg with a background in computer science and applied data analytics. Experience in Python-based automation, data modeling, and machine-learning-oriented analysis across industry and academic contexts. Focused on applied AI, data-driven decision support, and practical machine learning systems.
+        </div>
+      </div>
+    </section>
+
+    <hr />
+
+    <section>
+      <h2>Education</h2>
+      <div class="grid">
+        <div class="item">
+          <div class="itemhead">
+            <div>
+              <div class="role">M.Sc. Artificial Intelligence</div>
+              <div class="where">Friedrich-Alexander-Universität Erlangen–Nürnberg (FAU), Germany</div>
+            </div>
+            <div class="when">Oct 2025 – Present</div>
+          </div>
+          <ul>
+            <li>Coursework: Deep Learning, Natural Language Processing, Data Science &amp; Ethics, AI in Organizational Contexts</li>
+          </ul>
+        </div>
+
+        <div class="item">
+          <div class="itemhead">
+            <div>
+              <div class="role">B.Tech. Computer Science and Engineering</div>
+              <div class="where">Poornima College of Engineering, Jaipur, India (EQF Level 6)</div>
+            </div>
+            <div class="when">Aug 2019 – Jun 2023</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr />
+
+    <section>
+      <h2>Experience</h2>
+      <div class="grid">
+        <div class="item">
+          <div class="itemhead">
+            <div>
+              <div class="role">Associate Engineer</div>
+              <div class="where">ElasticRun — Pune, India</div>
+            </div>
+            <div class="when">Apr 2023 – Oct 2023</div>
+          </div>
+          <ul>
+            <li>Developed and maintained Python-based server-side logic and data models for business-critical workflows.</li>
+            <li>Built SQL reporting pipelines to support performance monitoring and executive decision-making.</li>
+            <li>Automated data validation and reporting processes, reducing reporting errors by approximately 20%.</li>
+            <li>Collaborated with global stakeholders to define technical requirements and system performance metrics.</li>
+          </ul>
+        </div>
+
+        <div class="item">
+          <div class="itemhead">
+            <div>
+              <div class="role">Data Science Intern</div>
+              <div class="where">Celebal Technologies — Jaipur, India</div>
+            </div>
+            <div class="when">Jul 2022 – Aug 2022</div>
+          </div>
+          <ul>
+            <li>Cleaned and analyzed unstructured datasets to generate actionable insights.</li>
+            <li>Developed predictive models to support evaluation of future project use cases.</li>
+            <li>Prepared data visualizations and presentations for non-technical stakeholders.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <hr />
+
+    <section>
+      <h2>Projects</h2>
+      <div class="grid">
+        <div class="item">
+          <div class="itemhead">
+            <div class="role">Sentiment Analysis (NLP)</div>
+          </div>
+          <div class="where">Neural-network-based text classification system for feedback analysis.</div>
+        </div>
+
+        <div class="item">
+          <div class="itemhead">
+            <div class="role">AI Use-Case Evaluation</div>
+          </div>
+          <div class="where">Research on integrating LLM tools (ChatGPT, Copilot) into development and administrative workflows.</div>
+        </div>
+
+        <div class="item">
+          <div class="itemhead">
+            <div class="role">Weather Prediction Model</div>
+          </div>
+          <div class="where">Statistical and machine learning approaches for trend forecasting.</div>
+        </div>
+      </div>
+    </section>
+
+    <hr />
+
+    <section>
+      <h2>Skills</h2>
+      <div class="skills">
+        <span class="skill">Python (Advanced)</span>
+        <span class="skill">SQL</span>
+        <span class="skill">Machine Learning</span>
+        <span class="skill">Deep Learning</span>
+        <span class="skill">NLP</span>
+        <span class="skill">TensorFlow</span>
+        <span class="skill">Azure Machine Learning</span>
+        <span class="skill">Data Modeling</span>
+        <span class="skill">Statistical Analysis</span>
+        <span class="skill">Power BI</span>
+        <span class="skill">REST APIs</span>
+        <span class="skill">Frappe Framework</span>
+        <span class="skill">English (C1)</span>
+        <span class="skill">German (A2 → B1/B2)</span>
+      </div>
+    </section>
+
+    <footer>
+      Last updated: 2026
+    </footer>
+  </main>
 </body>
 </html>
+
