--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
   <title>Aayush Sharma — AI / ML</title>
   <meta name="description" content="Aayush Sharma — Artificial Intelligence, Machine Learning, Data Analytics" />
   <style>
+        .nav{
+      position: sticky;
+      top: 12px;
+      z-index: 10;
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      padding: 10px 12px;
+      margin-bottom: 18px;
+      border: 1px solid var(--line);
+      border-radius: 14px;
+      background: rgba(255,255,255,0.88);
+      backdrop-filter: blur(8px);
+    }
+    .nav a{
+      text-decoration: none;
+      color: var(--muted);
+      font-size: 13px;
+      padding: 6px 10px;
+      border-radius: 999px;
+      border: 1px solid transparent;
+    }
+    .nav a:hover{
+      color: var(--text);
+      border-color: var(--line);
+      background: #fff;
+    }
+    html{
+      scroll-behavior: smooth;
+    }
+
     :root{
       --bg:#ffffff;
       --text:#111827;
@@ -17,6 +48,7 @@
     *{box-sizing:border-box}
     body{
       margin:0;
+      background: radial-gradient(circle at 20% 0%, #f3f4f6 0%, #ffffff 55%) fixed;
       background:var(--bg);
       color:var(--text);
       font:15px/1.55 ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
@@ -62,6 +94,13 @@
 
 <body>
   <main class="wrap">
+    <nav class="nav">
+  <a href="#profile">Profile</a>
+  <a href="#education">Education</a>
+  <a href="#experience">Experience</a>
+  <a href="#projects">Projects</a>
+  <a href="#skills">Skills</a>
+    </nav>
     <header>
       <div>
         <h1>Aayush Sharma</h1>
@@ -87,7 +126,7 @@
 
     <hr />
 
-    <section>
+    <section id="profile">
       <h2>Profile</h2>
       <div class="grid">
         <div class="item">
@@ -98,7 +137,7 @@
 
     <hr />
 
-    <section>
+    <section id="education">
       <h2>Education</h2>
       <div class="grid">
         <div class="item">
@@ -128,7 +167,7 @@
 
     <hr />
 
-    <section>
+    <section id="experience">
       <h2>Experience</h2>
       <div class="grid">
         <div class="item">
@@ -166,7 +205,7 @@
 
     <hr />
 
-    <section>
+    <section id="projects">
       <h2>Projects</h2>
       <div class="grid">
         <div class="item">
@@ -194,7 +233,7 @@
 
     <hr />
 
-    <section>
+    <section id="skills">
       <h2>Skills</h2>
       <div class="skills">
         <span class="skill">Python (Advanced)</span>
